@@ -6,7 +6,8 @@ interface:
 - allow access of transformed constraints in SCIP_STAGE_TRANSFORMED
 - new methods SCIPcheckCumulativeCondition(), SCIPpropCumulativeCondition, and SCIPrespropCumulativeCondition in cons_cumulative.h;
   these methods can be used to check, propagate, or resolve the propagation of a cumulative condition
-
+- new methods SCIPstrGetValue() and SCIPstrCopySection() in pub_misc.h; these methods can be used to 
+  convert a string into a SCIP_Real value and to copy a substring.
 
 performance improvements:
 - SCIP with SoPlex as LP solver now uses auto pricing by default (start with devex, switch to steepest edge after some iterations);
